Added standard part

--- a/templates/Representation.html
+++ b/templates/Representation.html
@@ -456,6 +456,9 @@
                         <a href="/representation">نمایندگی ها</a>
                     </p>
                     <p>
+                            <a href="/standard">استانداردا</a>
+                        </p>
+                    <p>
                         <a href="#!" data-toggle="modal" data-target="#modalContactForm">تماس با پشتیبانی</a>
                     </p>
 
