--- a/templates/about_en.html
+++ b/templates/about_en.html
@@ -255,9 +255,7 @@
                     </div>
                     <div class="modal-body">
                         <i class="fas fa-search-location fa-4x mb-3 animated rotateIn"></i>
-                        <p>
 
-                        </p>
                         <h5>
                             <p>
                                 Address: Tehran, Grand Bazaar, Ahangaran Bazaar, Jame Mosque Alley, Ibn Al-Reza Passage
@@ -429,6 +427,9 @@
                     <p>
                         <a data-toggle="modal" data-target="#fullHeightModalRight1">Distribution Center</a>
                     </p>
+                    <p>
+                            <a href="/standarden">Standards</a>
+                        </p>
                     <!-- <p>
                         <a href="#! ">Usage Rules</a>
                     </p>
