--- a/templates/about.html
+++ b/templates/about.html
@@ -361,6 +361,9 @@
                         <p>
                             <a href="/representation">نمایندگی ها</a>
                         </p>
+                         <p>
+                            <a href="/standard">استانداردا</a>
+                        </p>
                         <p>
                             <a href="#!" data-toggle="modal" data-target="#modalContactForm">تماس با پشتیبانی</a>
                         </p>
