--- a/templates/catalogen.html
+++ b/templates/catalogen.html
@@ -327,6 +327,9 @@
                     <p>
                         <a data-toggle="modal" data-target="#fullHeightModalRight1">Distribution Center</a>
                     </p>
+                    <p>
+                            <a href="/standarden">Standards</a>
+                        </p>
                     <!-- <p>
                         <a href="#! ">Usage Rules</a>
                     </p>
