--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -537,6 +537,9 @@
                     <p>
                         <a data-toggle="modal" data-target="#fullHeightModalRight1">Distribution Center</a>
                     </p>
+                    <p>
+                            <a href="/standarden">Standards</a>
+                        </p>
                     <!-- <p>
                         <a href="#! ">Usage Rules</a>
                     </p>
