--- a/templates/standarden.html
+++ b/templates/standarden.html
@@ -20,61 +20,61 @@
     <script src="{% static 'js/mdb.js' %}"></script>
     <style>
         /* Navigation*/
-        
+
         .scrolling-navbar {
             transition: background .5s ease-in-out, padding .5s ease-in-out;
         }
-        
+
         .top-nav-collapse {
             background-color: #667490!important;
         }
-        
+
         .navbar:not(.top-nav-collapse) {
             background: transparent!important;
         }
-        
+
         footer.page-footer {
             background-color: #667490 !important;
         }
-        
+
         @media only screen and (max-width: 768px) {
             .navbar {
                 background-color: #667490 !important;
             }
         }
         /* Necessary for full page carousel*/
-        
+
         html,
         body,
         .view {
             height: 100%;
         }
         /* Carousel*/
-        
+
         .carousel,
         .carousel-item,
         .carousel-item.active {
             height: 100%;
         }
-        
+
         .carousel-inner {
             height: 100%;
         }
-        
+
         .carousel-item:nth-child(1) {
             background-image: url({% static 'img/2.jpg' %});
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center center;
         }
-        
+
         .carousel-item:nth-child(2) {
             background-image: url({% static 'img/3.jpg' %});
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center center;
         }
-        
+
         .carousel-item:nth-child(3) {
             background-image: url({% static 'img/s.jpg' %});
             background-repeat: no-repeat;
@@ -261,40 +261,9 @@
         <section class="d-flex justify-content-center ">
             <div style="width: 50% ; margin-top: 5% ; margin-bottom: 5%">
 
-                <p>
-                    Gouaches Pars is the first standard of the Standard National Organization in Iran, which will have an important influence on the creation of the final work and your artistic idea, with its quality of colour.
-                </p>
-                <p>
 
-                    Goache Pars was created using the best pigments and technology of the world's day. The product is in use of the purest pigments pigments with a suitable concentration and uniform and glowing coating, which produces uniform and velvet surface drying after
-                    drying. </p>
-                <p>
-                    Goaches Pars was created using the best pigments and technology of the world's day. The product is in use of the purest pigments pigments with a suitable concentration and uniform and glowing coating, which produces uniform and velvet surface drying after
-                    drying.
-                </p>
-                <p>
-                    Goache Pars with more than 32 colors can be easily combined and produces a range of colored tonalite. Goache Pars does not lose color after mixing, and does not lose color. It is a solution based product and is washed and cleaned with water after drying.
-                </p>
-                <p>
-                    Note: It is not easy to dry properly if it is properly closed at normal temperature and is not easily dried in a normal temperature away from direct sunlight, so it can be used for a long time.
-                </p>
-                <p>
-                    The pars can be easily used in the airbrush if it is thick with water. The high concentration of the seeds leads to a glowing surface.
-                </p>
-                <p>
-                    metallic implants are one of the most attractive and attractive colors of the company. Metallics include gold, silver, copper, bronze, seashell, and a wide variety of colors include metallic blue, metallic pink, metallic green and …. It is the other product
-                    of the company, which in the dark and exposed to ultraviolet light, has the highest brightness and glow in the design of ultraviolet, doll making, Grim and decorative plays
-                </p>
-                <p>
-                    In the packs of, 30 miles of pars are included: 6 -12 - 18 colours and higher volumes: 250 miles and 1000 miles and … for high use and a workshop. The combination of colors red and yellow and blue is three main colors, combining the three colors of colors:
-                    orange, green, violet, and all colors.
-                </p>
-                                    <a href="{% static 'img/IMG_0154.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_0154.JPG' %}"></a>
-                    <a href="{% static 'img/IMG_8910.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_8910.JPG' %}"></a>
-                    <a href="{% static 'img/IMG_8910 (1).JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_8910 (1).JPG' %}"></a>
-                    <a href="{% static 'img/IMG_5467.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_5467.JPG' %}"></a>
-                    <a href="{% static 'img/IMG_5464.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_5464.JPG' %}"></a>
-                    <a href="{% static 'img/FullSizeRender (3).jpg' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/FullSizeRender (3).jpg' %}"></a>
+                                    <a href="{% static 'img/standard_1.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/standard_1.jpg' %}"></a>
+                    <a href="{% static 'img/standard_2.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/standard_2.jpg' %}"></a>
             </div>
 
         </section>
