Added standard part

--- a/templates/archive.html
+++ b/templates/archive.html
@@ -262,7 +262,7 @@
 
 
                     <a href="{% static 'img/new_year.jpeg' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/new_year.jpeg' %}"></a>
-                    <a href="{% static 'img/new_year.jpeg' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/new_year.jpeg' %}"></a>
+                    <a href="{% static 'img/IMG_0635.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_0635.JPG' %}"></a>
 
 
 
