Added standard part

--- a/templates/acleryc.html
+++ b/templates/acleryc.html
@@ -334,7 +334,7 @@
                         <a href="/representation">نمایندگی ها</a>
                     </p>
                     <p>
-                            <a href="/standard">استانداردا</a>
+                            <a href="/standard">استاندارد</a>
                         </p>
                     <p>
                         <a href="#!" data-toggle="modal" data-target="#modalContactForm">تماس با پشتیبانی</a>
