--- a/templates/Representation.html
+++ b/templates/Representation.html
@@ -71,6 +71,7 @@
                 </button>
                 </div>
                 <div class="modal-body mx-3">
+                    <form method="GET" action="mailto:support@giresh.com">
                     <div class="md-form mb-5">
                         <i class="fas fa-user prefix grey-text"></i>
                         <input type="text" id="form34" class="form-control validate">
@@ -85,16 +86,16 @@
 
                     <div class="md-form mb-5">
                         <i class="fas fa-tag prefix grey-text"></i>
-                        <input type="text" id="form32" class="form-control validate">
+                        <input type="text" id="form32" class="form-control validate" name="subject">
                         <label data-error="wrong" data-success="right" for="form32">موضوع</label>
                     </div>
 
                     <div class="md-form">
                         <i class="fas fa-pencil prefix grey-text"></i>
-                        <textarea type="text" id="form8" class="md-textarea form-control" rows="4"></textarea>
+                        <textarea type="text" id="form8" class="md-textarea form-control" rows="4" name="body"></textarea>
                         <label data-error="wrong" data-success="right" for="form8">پیام شما</label>
                     </div>
-
+</form>
                 </div>
                 <div class="modal-footer d-flex justify-content-center">
                     <button class="btn btn-unique">ارسال <i class="fas fa-paper-plane-o ml-1"></i></button>
