--- a/templates/blog.html
+++ b/templates/blog.html
@@ -87,7 +87,7 @@
     </style>
     <div class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
+           <div class="modal-content">
                 <div class="modal-header text-center">
                     <h4 class="modal-title w-100 font-weight-bold">تماس با ما</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -95,6 +95,7 @@
                 </button>
                 </div>
                 <div class="modal-body mx-3">
+                    <form method="GET" action="mailto:support@giresh.com">
                     <div class="md-form mb-5">
                         <i class="fas fa-user prefix grey-text"></i>
                         <input type="text" id="form34" class="form-control validate">
@@ -109,16 +110,16 @@
 
                     <div class="md-form mb-5">
                         <i class="fas fa-tag prefix grey-text"></i>
-                        <input type="text" id="form32" class="form-control validate">
+                        <input type="text" id="form32" class="form-control validate" name="subject">
                         <label data-error="wrong" data-success="right" for="form32">موضوع</label>
                     </div>
 
                     <div class="md-form">
                         <i class="fas fa-pencil prefix grey-text"></i>
-                        <textarea type="text" id="form8" class="md-textarea form-control" rows="4"></textarea>
+                        <textarea type="text" id="form8" class="md-textarea form-control" rows="4" name="body"></textarea>
                         <label data-error="wrong" data-success="right" for="form8">پیام شما</label>
                     </div>
-
+</form>
                 </div>
                 <div class="modal-footer d-flex justify-content-center">
                     <button class="btn btn-unique">ارسال <i class="fas fa-paper-plane-o ml-1"></i></button>
