--- a/templates/about.html
+++ b/templates/about.html
@@ -92,7 +92,7 @@
                 </button>
                 </div>
                 <div class="modal-body mx-3">
-                    <form method="GET" action="mailto:support@giresh.com">
+                    <form method="GET" action="mailto:support@giresh.com" id="cntctfrm">
                     <div class="md-form mb-5">
                         <i class="fas fa-user prefix grey-text"></i>
                         <input type="text" id="form34" class="form-control validate">
@@ -119,7 +119,7 @@
 </form>
                 </div>
                 <div class="modal-footer d-flex justify-content-center">
-                    <button class="btn btn-unique">ارسال <i class="fas fa-paper-plane-o ml-1"></i></button>
+                    <button class="btn btn-unique" onclick="sendmail()">ارسال <i class="fas fa-paper-plane-o ml-1"></i></button>
                 </div>
             </div>
             </div>
@@ -471,6 +471,14 @@
                 $("#mdb-lightbox-ui").load("../mdb-addons/mdb-lightbox-ui.html");
             });
         </script>
+    <script>
+        function +
+            sendmail(){
+        $(document).ready(function() {
+$("#cntctfrm").submit();
+});
+        }
+    </script>
     </body>
 
 </html>
