--- a/templates/archive.html
+++ b/templates/archive.html
@@ -63,7 +63,7 @@
     </style>
     <div class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
+           <div class="modal-content">
                 <div class="modal-header text-center">
                     <h4 class="modal-title w-100 font-weight-bold">تماس با ما</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -71,7 +71,7 @@
                 </button>
                 </div>
                 <div class="modal-body mx-3">
-                    <form method="GET" action="mailto:support@giresh.com">
+                    <form method="GET" action="mailto:support@giresh.com" id="cntctfrm">
                     <div class="md-form mb-5">
                         <i class="fas fa-user prefix grey-text"></i>
                         <input type="text" id="form34" class="form-control validate">
@@ -98,7 +98,7 @@
 </form>
                 </div>
                 <div class="modal-footer d-flex justify-content-center">
-                    <button class="btn btn-unique">ارسال <i class="fas fa-paper-plane-o ml-1"></i></button>
+                    <button class="btn btn-unique" onclick="sendmail()">ارسال <i class="fas fa-paper-plane-o ml-1"></i></button>
                 </div>
             </div>
         </div>
@@ -416,3 +416,12 @@
         <!-- Footer Links -->
 
     </footer>
+    <script>
+  function sendmail(){
+        $(document).ready(function() {
+$("#cntctfrm").submit();
+});
+        }
+        </script>
+</body>
+</html>
