--- a/templates/blog.html
+++ b/templates/blog.html
@@ -95,7 +95,7 @@
                 </button>
                 </div>
                 <div class="modal-body mx-3">
-                    <form method="GET" action="mailto:support@giresh.com">
+                    <form method="GET" action="mailto:support@giresh.com" id="cntctfrm">
                     <div class="md-form mb-5">
                         <i class="fas fa-user prefix grey-text"></i>
                         <input type="text" id="form34" class="form-control validate">
@@ -122,7 +122,7 @@
 </form>
                 </div>
                 <div class="modal-footer d-flex justify-content-center">
-                    <button class="btn btn-unique">ارسال <i class="fas fa-paper-plane-o ml-1"></i></button>
+                    <button class="btn btn-unique" onclick="sendmail()">ارسال <i class="fas fa-paper-plane-o ml-1"></i></button>
                 </div>
             </div>
         </div>
@@ -508,6 +508,13 @@
         <!-- Footer Links -->
 
     </footer>
+    <script>
+  function sendmail(){
+        $(document).ready(function() {
+$("#cntctfrm").submit();
+});
+        }
+        </script>
 </body>
 
 </html>
