:bug: Fix email

--- a/templates/acleryc.html
+++ b/templates/acleryc.html
@@ -260,7 +260,7 @@
     <main>
         <div>
             <section class="d-flex justify-content-center ">
-                <div style="width: 50% ; margin-top: 5% ; margin-bottom: 5%">
+                <div style="width: 50% ; margin-top: 5% ; margin-bottom: 5%;image-orientation: from-image">
 
                     <p style="text-align:right;float:right">شرکت گیرش(محصولات هنری پارس) بابیش از سی سال سابقه تولید رنگهای هنری می باشد و مجموعه کاملی از رنگهای هنری مورد نیاز هنرمندان را تولید می کند. محصولات پارس به جهت دارا بودن کیفیت فوق العاده همواره مورد تایید و اعتماد هنرمندان در گروههای
                         سنی مختلف و نیازهای متفاوت را شامل می شود</p>
