--- a/templates/archive.html
+++ b/templates/archive.html
@@ -259,7 +259,7 @@
     <main>
         <div>
             <section class="d-flex justify-content-center ">
-                <div style="width: 50% ; margin-top: 5% ; margin-bottom: 5%">
+                <div style="width: 50% ; margin-top: 5% ; margin-bottom: 5%;image-orientation: from-image">
 
 
                     <a href="{% static 'img/new_year.jpeg' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/new_year.jpeg' %}"></a>
