--- a/templates/govash.html
+++ b/templates/govash.html
@@ -259,7 +259,7 @@
     <main>
         <div>
             <section class="d-flex justify-content-center ">
-                <div style="width: 50% ; margin-top: 5% ; margin-bottom: 5%">
+                <div style="width: 50% ; margin-top: 5% ; margin-bottom: 5%;image-orientation: from-image">
 
                     <p style="text-align:right;float:right">گواش پارس اولین گواش دارای استاندارد از سازمان ملی استاندارد در ایران است که با کیفیت واعجاز رنگی خود تاثیر مهمی در خلق اثر نهایی و ایده هنری شما خواهد داشت</p>
                     <p style="text-align:right;float:right">گواش پارس با استفاده از بهترین پیگمنتها و تکنولوژی روز دنیا ساخته شده.این محصول با بکارگیری خالصترین رنگدانه ها داری رنگی با غلظت مناسب و پوشش یکدست و درخشان می باشد که پس از خشک شدن سطحی یکنواخت و مخملی را بوجود می آورد .</p>
