:construction: Fixing Image Problem

--- a/templates/govash.html
+++ b/templates/govash.html
@@ -19,6 +19,11 @@
     <script src="{% static 'js/bootstrap.js' %}"></script>
     <script src="{% static 'js/mdb.js' %}"></script>
     <style>
+        .fix-image{
+            image-orientation: from-image;
+            max-height: 300px !important;
+            max-width: 300px !important;
+        }
         /* Navigation*/
         
         .scrolling-navbar {
@@ -273,13 +278,14 @@
                     <p style="float:right;text-align:right">بسته بندیهای گواش ٣٠میل پارس شامل: ٦ -١٢- ١٨رنگ بوده و حجمهاي بالاتر : ٢٥٠ميل ٥٠٠ميل و ١٠٠٠ميل و....جهت مصارف بالا و کارگاهی موجود می باشد. ترکیب رنگها قرمز و زرد و آبی سه رنگی اصلی می باشد از ترکیب این سه رنگ رنگهای فرعی : نارنجی
                         ،سبز، بنفش و همه رنگها را می توان ساخت.
                     </p>
+                    <div class="fix-image">
                     <a href="{% static 'img/IMG_0154.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_0154.JPG' %}"></a>
                     <a href="{% static 'img/IMG_8910.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_8910.JPG' %}"></a>
                     <a href="{% static 'img/IMG_8910 (1).JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_8910 (1).JPG' %}"></a>
                     <a href="{% static 'img/IMG_5467.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_5467.JPG' %}"></a>
                     <a href="{% static 'img/IMG_5464.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_5464.JPG' %}"></a>
                     <a href="{% static 'img/FullSizeRender (3).jpg' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/FullSizeRender (3).jpg' %}"></a>
-
+</div>
 
 
 
