--- a/templates/aclerycen.html
+++ b/templates/aclerycen.html
@@ -20,6 +20,11 @@
     <script src="{% static 'js/mdb.js' %}"></script>
     <style>
         /* Navigation*/
+        .fix-image{
+            image-orientation: from-image;
+            max-height: 300px !important;
+            max-width: 300px !important;
+        }
         
         .scrolling-navbar {
             transition: background .5s ease-in-out, padding .5s ease-in-out;
@@ -280,12 +285,14 @@
                 </p>
                 <p>
                     The striking point that distinguishes Persia from other competitors is the long - lasting properties and high - colour consistency against atmospheric changes that make the production of artistic colors specific to wall paintings at large surfaces. </p>
+                <div class="fix-image">
 <a href="{% static 'img/unnamed.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/unnamed.jpg' %}"></a>
  <a href="{% static 'img/img2301.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/img2301.jpg' %}"></a>
                                 <a href="{% static 'img/IMG_4922.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/IMG_4922.JPG' %}"></a>
                                 <a href="{% static 'img/IMG_4374.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/IMG_4374.JPG' %}"></a>
                                 <a href="{% static 'img/IMG_3960_Reduced.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/IMG_3960_Reduced.jpg' %}"></a>
                                 <a href="{% static 'img/FullSizeRender.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/FullSizeRender.jpg' %}"></a>            </div>
+        </div>
         </section>
     </main>
     <footer class="page-footer font-small stylish-color-dark ">
