--- a/templates/govashen.html
+++ b/templates/govashen.html
@@ -20,12 +20,7 @@
     <script src="{% static 'js/mdb.js' %}"></script>
     <style>
         /* Navigation*/
-        .fix-image{
-            image-orientation: from-image;
-            max-height: 300px !important;
-            max-width: 300px !important;
-        }
-
+        
         .scrolling-navbar {
             transition: background .5s ease-in-out, padding .5s ease-in-out;
         }
@@ -294,14 +289,13 @@
                     In the packs of, 30 miles of pars are included: 6 -12 - 18 colours and higher volumes: 250 miles and 1000 miles and … for high use and a workshop. The combination of colors red and yellow and blue is three main colors, combining the three colors of colors:
                     orange, green, violet, and all colors.
                 </p>
-                <div class="fix-image">
                                     <a href="{% static 'img/IMG_0154.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_0154.JPG' %}"></a>
                     <a href="{% static 'img/IMG_8910.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_8910.JPG' %}"></a>
                     <a href="{% static 'img/IMG_8910 (1).JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_8910 (1).JPG' %}"></a>
                     <a href="{% static 'img/IMG_5467.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_5467.JPG' %}"></a>
                     <a href="{% static 'img/IMG_5464.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_5464.JPG' %}"></a>
                     <a href="{% static 'img/FullSizeRender (3).jpg' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/FullSizeRender (3).jpg' %}"></a>
-                </div></div>
+            </div>
 
         </section>
     </main>
