--- a/templates/govash.html
+++ b/templates/govash.html
@@ -21,11 +21,6 @@
     <style>
         /* Navigation*/
         
-        .fix-image-size {
-            width: 400px !important;
-            height: 600px !important;
-        }
-        
         .scrolling-navbar {
             transition: background .5s ease-in-out, padding .5s ease-in-out;
         }
@@ -278,12 +273,12 @@
                     <p style="float:right;text-align:right">بسته بندیهای گواش ٣٠میل پارس شامل: ٦ -١٢- ١٨رنگ بوده و حجمهاي بالاتر : ٢٥٠ميل ٥٠٠ميل و ١٠٠٠ميل و....جهت مصارف بالا و کارگاهی موجود می باشد. ترکیب رنگها قرمز و زرد و آبی سه رنگی اصلی می باشد از ترکیب این سه رنگ رنگهای فرعی : نارنجی
                         ،سبز، بنفش و همه رنگها را می توان ساخت.
                     </p>
-                    <a href="{% static 'img/IMG_0154.JPG' %}" target="_blank"> <img class="img-fluid fix-image-size z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_0154.JPG' %}"></a>
-                    <a href="{% static 'img/IMG_8910.JPG' %}" target="_blank"> <img class="img-fluid fix-image-size z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_8910.JPG' %}"></a>
-                    <a href="{% static 'img/IMG_8910 (1).JPG' %}" target="_blank"> <img class="img-fluid fix-image-size z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_8910 (1).JPG' %}"></a>
-                    <a href="{% static 'img/IMG_5467.JPG' %}" target="_blank"> <img class="img-fluid fix-image-size z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_5467.JPG' %}"></a>
-                    <a href="{% static 'img/IMG_5464.JPG' %}" target="_blank"> <img class="img-fluid fix-image-size z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_5464.JPG' %}"></a>
-                    <a href="{% static 'img/FullSizeRender (3).jpg' %}" target="_blank"> <img class="img-fluid fix-image-size z-depth-5 img-thumbnail rounded" src="{% static 'img/FullSizeRender (3).jpg' %}"></a>
+                    <a href="{% static 'img/IMG_0154.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_0154.JPG' %}"></a>
+                    <a href="{% static 'img/IMG_8910.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_8910.JPG' %}"></a>
+                    <a href="{% static 'img/IMG_8910 (1).JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_8910 (1).JPG' %}"></a>
+                    <a href="{% static 'img/IMG_5467.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_5467.JPG' %}"></a>
+                    <a href="{% static 'img/IMG_5464.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/IMG_5464.JPG' %}"></a>
+                    <a href="{% static 'img/FullSizeRender (3).jpg' %}" target="_blank"> <img class="img-fluid z-depth-5 img-thumbnail rounded" src="{% static 'img/FullSizeRender (3).jpg' %}"></a>
 
 
 
@@ -345,8 +340,8 @@
                         <a href="/representation">نمایندگی ها</a>
                     </p>
                     <p>
-                        <a href="/standard">استاندارد</a>
-                    </p>
+                            <a href="/standard">استاندارد</a>
+                        </p>
                     <p>
                         <a href="#!" data-toggle="modal" data-target="#modalContactForm">تماس با پشتیبانی</a>
                     </p>
